<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="@dimen/margin_middle"
                android:padding="@dimen/margin_middle"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/play_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/world_of_music"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/iv_favourite"
                app:layout_constraintStart_toEndOf="@id/iv_back"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_favourite"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="@dimen/margin_middle"
                android:layout_marginEnd="@dimen/margin_standard"
                android:padding="@dimen/margin_middle"
                android:src="@drawable/ic_favorite_border"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_music_image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginVertical="24dp"
        android:src="@drawable/music_player_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:shapeAppearanceOverlay="@style/curved"
        app:strokeColor="#2196F3"
        app:strokeWidth="5dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_song_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:gravity="center_horizontal"
        android:text="@string/song_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/iv_music_image" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/play_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/music_status"
        app:layout_constraintTop_toBottomOf="@id/tv_song_name">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btn_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_previous"
            app:iconSize="40dp" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btn_play_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:backgroundTint="@android:color/holo_red_light"
            app:icon="@drawable/ic_play"
            app:iconSize="50dp"
            app:iconTint="#FFFFFF"
            app:shapeAppearanceOverlay="@style/curved" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_next"
            app:iconSize="40dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/music_status"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_margin="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/extra_actions"
        app:layout_constraintTop_toBottomOf="@id/play_container">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_tv"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_tv"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/extra_actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/music_status">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_repeat"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:contentDescription="@string/repeat_btn"
            android:padding="8dp"
            android:src="@drawable/ic_repeat"
            android:tint="#E91E63" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_equalizer"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:contentDescription="@string/equalizer_btn"
            android:padding="8dp"
            android:src="@drawable/ic_equalizer"
            android:tint="#E91E63" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_timer"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:contentDescription="@string/time_btn"
            android:padding="8dp"
            android:src="@drawable/ic_timer"
            android:tint="#E91E63" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_share"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:contentDescription="@string/share_btn"
            android:padding="8dp"
            android:src="@drawable/ic_share"
            android:tint="#E91E63" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>