<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/main_color">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/app_bar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_menu"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="@dimen/margin_middle"
                        android:padding="@dimen/margin_middle"
                        android:src="@drawable/ic_menu"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/search_card_view"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginHorizontal="12dp"
                        android:layout_marginVertical="8dp"
                        android:background="#C9C8CD"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/iv_menu"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/search_image_view"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:src="@drawable/ic_search"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                tools:ignore="ContentDescription" />

                            <ImageView
                                android:id="@+id/clear_search_query"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="8dp"
                                android:background="?attr/selectableItemBackground"
                                android:padding="8dp"
                                android:src="@drawable/ic_clear"
                                android:visibility="invisible"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="0.0"
                                tools:ignore="ContentDescription" />

                            <ImageView
                                android:id="@+id/voice_search_query"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="8dp"
                                android:background="?attr/selectableItemBackground"
                                android:padding="8dp"
                                android:src="@drawable/ic_voice"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                tools:ignore="ContentDescription" />

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/search_edit_text"
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:layout_marginHorizontal="@dimen/margin_standard"
                                android:layout_marginVertical="8dp"
                                android:background="@android:color/transparent"
                                android:hint="@string/search_song"
                                android:inputType="text"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toStartOf="@id/voice_search_query"
                                app:layout_constraintStart_toEndOf="@id/search_image_view"
                                app:layout_constraintTop_toTopOf="parent" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </com.google.android.material.card.MaterialCardView>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.AppBarLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/app_bar">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_shuffle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="@dimen/margin_standard"
                    android:layout_marginStart="@dimen/margin_standard"
                    android:layout_marginEnd="@dimen/margin_middle"
                    android:layout_weight="1"
                    android:elevation="12dp"
                    app:cardCornerRadius="@dimen/margin_middle">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/margin_middle">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_shuffle" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="@dimen/margin_small"
                            android:gravity="center"
                            android:text="@string/shuffle" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_favourite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="@dimen/margin_standard"
                    android:layout_marginStart="@dimen/margin_middle"
                    android:layout_marginEnd="@dimen/margin_middle"
                    android:layout_weight="1"
                    app:cardCornerRadius="@dimen/margin_middle">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/margin_middle">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_favorite" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="@dimen/margin_small"
                            android:gravity="center"
                            android:text="@string/favourite" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_playlist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="@dimen/margin_standard"
                    android:layout_marginStart="@dimen/margin_middle"
                    android:layout_marginEnd="@dimen/margin_standard"
                    android:layout_weight="1"
                    app:cardCornerRadius="@dimen/margin_middle">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/margin_middle">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_library_music" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="@dimen/margin_small"
                            android:text="@string/playlist" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.cardview.widget.CardView>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_total_songs_counts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_standard"
                android:layout_marginTop="@dimen/margin_standard"
                android:text="@string/total_songs"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/container" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_songs"
                android:layout_width="match_parent"
                android:scrollbars="vertical"
                android:scrollbarThumbVertical="@drawable/ic_checkbox_border"
                android:layout_height="0dp"
                android:layout_marginHorizontal="@dimen/margin_middle"
                android:layout_marginTop="@dimen/margin_middle"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_total_songs_counts" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/noSearchResultsFoundText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_search_results_found"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"
        android:layout_gravity="start" />

</androidx.drawerlayout.widget.DrawerLayout>